force-app/main/default/objects/SESOC__Provider_Notification_Setting__c/SESOC__Provider_Notification_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>SESOC - Provider Notification Settings</label>
</CustomObject>