force-app/main/default/objects/SESOC__Provider_Notification_Setting__c/fields/SESOC__Active__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>