force-app/main/default/objects/SESOC__Provider_Notification_Setting__c/fields/SESOC__Logging_Provider__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Logging_Provider__c</fullName>
    <label>Logging Provider</label>
    <length>255</length>
    <type>Text</type>
</CustomField>