force-app/main/default/objects/SESOC__Provider_Notification_Setting__c/fields/SESOC__Provider_Class_Name__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Provider_Class_Name__c</fullName>
    <label>Provider Class Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>