force-app/main/default/objects/SESOC__Provider_Notification_Setting__c/fields/SESOC__Store_Request__c.field-meta.xml
<CustomField>
    <fullName>SESOC__Store_Request__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Store Request</label>
    <type>Checkbox</type>
</CustomField>